log
Sun Mar 13 16:50:39 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c74f28b
Sun Mar 13 16:51:22 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1022747
Sun Mar 13 16:52:17 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f280e90
Sun Mar 13 16:56:03 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e872749
Sun Mar 13 16:56:27 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7ba1d87
Sun Mar 13 16:56:34 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e5a96d5
Sun Mar 13 16:56:55 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a8803a8
Sun Mar 13 17:00:22 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
df3bc22
Sun Mar 13 17:04:46 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
74cbaa1
Sun Mar 13 17:06:54 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e47e667
Sun Mar 13 17:08:25 HSP 2022: 
 tests:  0|7
total_score: 0/70
a3c94c8
Sun Mar 13 17:25:33 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
ca540ff
Sun Mar 13 18:45:59 HSP 2022: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|6
total_score: 10/70
9be43a1
